Fixed Reboot button width to fit behind the text

--- a/htdocs/luci-static/argon/css/cascade.css
+++ b/htdocs/luci-static/argon/css/cascade.css
@@ -3464,7 +3464,7 @@ pre.command-output {
   background: #fb6340 !important;
   border-color: #fb6340 !important;
   margin-left: 0 !important;
-  width: 82px !important;
+  width: 125px !important;
 }
 /* applyreboot fix */
 #applyreboot-container {
